PolicyGenerator/example-yaml/quickstart-fourth-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quickstart-fourth
spec:
  egress:
  - to:
    - podSelector:
        matchLabels:
          app.consumer: consumer
    - podSelector:
        matchLabels:
          app: third
  podSelector:
    matchLabels:
      app: fourth
  policyTypes:
  - Egress
