PolicyGenerator/example-yaml/quickstart-provider-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: quickstart-provider
spec:
  egress:
  - to: []
  podSelector:
    matchLabels:
      app.label: provider
  policyTypes:
  - Egress
